Fix contributors widget alignment on mobile/tablet.

--- a/resources/assets/sass/components/_contributor-widget.scss
+++ b/resources/assets/sass/components/_contributor-widget.scss
@@ -1,6 +1,6 @@
 /**
  * Copyright (c) 2017 SkyzohKey
- * 
+ *
  * This software is released under the MIT License.
  * https://opensource.org/licenses/MIT
  */
@@ -13,6 +13,7 @@
 
   @include breakpoint(tablet) {
     flex-flow: column nowrap;
+    align-items: flex-start;
   }
 }
 
